--- a/pages/projects.html
+++ b/pages/projects.html
@@ -61,9 +61,8 @@
                     </div>
                     <div class="back">
                         <div class="inner">
-                            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Alias cum repellat velit
-                                quae suscipit c.</p>
-                            <a name="" id="" class="btn btn-primary" href="#" role="button">Button</a>
+                            <p>This was a project I made with a group in school where we made up the idea to make a portable voting application, which you can use to vote from anywhere from your phone.</p>
+                            <a name="" id="" class="btn btn-primary" href="https://github.com/ROCMondriaanTIN/sd22-interactiondesign-examen-uitwerking-shisha-tech.git" role="button">Button</a>
                         </div>
                     </div>
                 </div>
@@ -80,9 +79,8 @@
                         </div>
                         <div class="back">
                             <div class="inner">
-                                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Alias cum repellat velit
-                                    quae suscipit c.</p>
-                                <a name="" id="" class="btn btn-primary" href="#" role="button">Button</a>
+                                <p>This was a project we had to make for school game related, I chose to make a pokemon fighting game. I haven't got around to finish it but maybe in the future I will.</p>
+                                <a name="" id="" class="btn btn-primary" href="https://github.com/ROCMondriaanTIN/sd22-themaweek-2-t1k-lennyaaaa.git" role="button">Button</a>
                             </div>
                         </div>
                     </div>
@@ -99,9 +97,8 @@
                         </div>
                         <div class="back">
                             <div class="inner">
-                                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Alias cum repellat velit
-                                    quae suscipit c.</p>
-                                <a name="" id="" class="btn btn-primary" href="#" role="button">Button</a>
+                                <p>This is a Tic Tac Toe game we had to make for a project, I chose to make it themed and have a story around the anime/manga named Chainsaw Man.</p>
+                                <a name="" id="" class="btn btn-primary" href="https://github.com/ROCMondriaanTIN/sd22-project-p02-boter-kaas-en-eieren-lennyaaaa.git" role="button">Button</a>
                             </div>
                         </div>
                     </div>
@@ -118,9 +115,8 @@
                         </div>
                         <div class="back">
                             <div class="inner">
-                                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Alias cum repellat velit
-                                    quae suscipit c.</p>
-                                <a name="" id="" class="btn btn-primary" href="#" role="button">Button</a>
+                                <p>This was a project we had to make for school to get used to API and processing all the data and using it in our websites. I had learned a lot from this and can now work way more easily with API's.</p>
+                                <a name="" id="" class="btn btn-primary" href="https://github.com/ROCMondriaanTIN/sd22-p03-project-webcatalogus-t1k-fc-muzaza.git" role="button">Button</a>
                             </div>
                         </div>
                     </div>
@@ -137,9 +133,8 @@
                         </div>
                         <div class="back">
                             <div class="inner">
-                                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Alias cum repellat velit
-                                    quae suscipit c.</p>
-                                <a name="" id="" class="btn btn-primary" href="#" role="button">Button</a>
+                                <p>This was a dashboard application where we had to make a website where you could find info on various subjects which we showed with API's. I made the FAQ/Support and the crypto dashboard page!</p>
+                                <a name="" id="" class="btn btn-primary" href="https://github.com/ROCMondriaanTIN/sd22-p04-project-dashboard-team-lenny-boss.git" role="button">Button</a>
                             </div>
                         </div>
                     </div>
@@ -156,9 +151,8 @@
                         </div>
                         <div class="back">
                             <div class="inner">
-                                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Alias cum repellat velit
-                                    quae suscipit c.</p>
-                                <a name="" id="" class="btn btn-primary" href="#" role="button">Button</a>
+                                <p>This was a Higher Lower game we had to make in a group of two people this was our first project of the year.</p>
+                                <a name="" id="" class="btn btn-primary" href="https://github.com/dvangeest/higher-lower.git" role="button">Button</a>
                             </div>
                         </div>
                     </div>
