--- a/pages/about.html
+++ b/pages/about.html
@@ -1,92 +1,47 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
-
 <head>
-    <title>Title</title>
-    <!-- Required meta tags -->
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-
-    <!-- Bootstrap CSS v5.2.1 -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
-    <link rel="stylesheet" href="/css/about.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>About Me</title>
+    <link rel="stylesheet" href="/style/style.css"> <!-- Link to your CSS file -->
 </head>
-
 <body>
-    <header>
-        <nav class="navbar navbar-expand-sm navbar-light navBar">
-            <div class="container">
-                <a class="navbar-brand text-white nav-bar-item" href="#">Lenny</a>
-                <button class="navbar-toggler d-lg-none" type="button" data-bs-toggle="collapse"
-                    data-bs-target="#collapsibleNavId" aria-controls="collapsibleNavId" aria-expanded="false"
-                    aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-                <div class="collapse navbar-collapse" id="collapsibleNavId">
-                    <ul class="navbar-nav ms-auto mt-2 mt-lg-0">
-                        <li class="nav-item">
-                            <a class="nav-link text-white nav-bar-item nav-home" href="../index.html">Home</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-white nav-bar-item nav-about aboutNav" href="/pages/about.html">About</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-white nav-bar-item nav-contact"
-                                href="/pages/contact.html">Contact</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-white nav-bar-item nav-projects"
-                                href="/pages/projects.html">Projects</a>
-                        </li>
-                    </ul>
-                </div>
+    <div class="terminal-wrapper">
+        <div class="terminal">
+            <div class="terminal-header">
+                <a href="selector.html"><div class="terminal-button red"></div></a>
+                <a href="selector.html"><div class="terminal-button yellow"></div></a>
+                <a href="selector.html"><div class="terminal-button green"></div></a>
             </div>
-        </nav>
-    </header>
-    <main>
-      <div class="container about-section py-5">
-        <div class="row about-me">
-            <div class="col-md">
-                <h1>
-                    About me
-                </h1>
-                <p>
-                    I'm a 17 year old Software Developer from The Netherlands, I'm currently studying at the
-                     ROC van The Hague. Also I'm  working on a few projects, one of them is a Dashboard.
-                     I'm also working on a website for a friend of mine.
-
-                     <br>
-                    <br>
-
-                     I've been interested in programming for a really long time and this year I finally started learning some languages like HTML, CSS, and JavaScript.
-                     After I've finished my current study I'm planning on going to a university or if i like the company where ill do my internship I'll stay there.
-                     I hope in the future of my coding career I can really express my own style and creativity in my projects. But also stay professional and make sure my code is readable and understandable for other people.
-
-                    <br>
-                    <br>
-
-                    I like going to the gym to work on my body and I also like to play games with my friends, such as Overwatch, Minecraft and Diablo. I also really enjoy reading books/manga.
-                    
-                </p>
-            </div>
-            <div class="col-md">
-                <img class="gojoImg" src="/media/Fresh.webp" alt="">
+            <div class="terminal-body">
+                <h2>About Me</h2>
+                <p>My name is Lenny Bos, 18 years old, and enthusiastic about gaining experience in the Software Development sector. During my education, I have worked with multiple programming languages and MySQL. Additionally, I have built a strong foundation in design using Figma.</p>
+                <h2>Education</h2>
+                <ul>
+                    <li>VMBTO Diploma - ISW Hoogeland (2018-2022)</li>
+                    <li>Software Developer - ROC Mondriaan (2022-2025)</li>
+                </ul>
+                <h2>Skills</h2>
+                <ul>
+                    <li>PHP</li>
+                    <li>Symfony</li>
+                    <li>HTML5</li>
+                    <li>CSS</li>
+                    <li>JavaScript</li>
+                    <li>MySQL</li>
+                    <li>Figma</li>
+                    <li>... (add more skills as needed)</li>
+                </ul>
+                <h2>Languages</h2>
+                <ul>
+                    <li>Dutch (Native)</li>
+                    <li>English (Proficient)</li>
+                </ul>
             </div>
         </div>
-        </div>
-    </main>
-    <footer>
-    </footer>
+    </div>
 
-    <script src="/js/main.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.7/dist/umd/popper.min.js"
-        integrity="sha384-zYPOMqeu1DAVkHiLqWBUTcbYfZ8osu1Nd6Z89ify25QV9guujx43ITvfi12/QExE"
-        crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.min.js"
-        integrity="sha384-Y4oOpwW3duJdCWv5ly8SCFYWqFDsfob/3GkgExXKV4idmbt98QcxXYs9UoXAB7BZ"
-        crossorigin="anonymous"></script>
-    </script>
+    <script src="../script.js"></script> <!-- Link to your JavaScript file -->
 </body>
-
 </html>
