--- a/pages/contact.html
+++ b/pages/contact.html
@@ -1,88 +1,30 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
-
 <head>
-    <title>Title</title>
-    <!-- Required meta tags -->
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-
-    <!-- Bootstrap CSS v5.2.1 -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
-    <link rel="stylesheet" href="/css/contact.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Contact</title>
+    <link rel="stylesheet" href="/style/style.css"> <!-- Link to your CSS file -->
 </head>
-
 <body>
-    <header>
-        <nav class="navbar navbar-expand-sm navbar-light navBar">
-            <div class="container">
-                <a class="navbar-brand text-white nav-bar-item" href="#">Lenny</a>
-                <button class="navbar-toggler d-lg-none" type="button" data-bs-toggle="collapse"
-                    data-bs-target="#collapsibleNavId" aria-controls="collapsibleNavId" aria-expanded="false"
-                    aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-                <div class="collapse navbar-collapse" id="collapsibleNavId">
-                    <ul class="navbar-nav ms-auto mt-2 mt-lg-0">
-                        <li class="nav-item">
-                            <a class="nav-link text-white nav-bar-item nav-home" href="../index.html">Home</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-white nav-bar-item nav-about aboutNav" href="/pages/about.html">About</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-white nav-bar-item nav-contact"
-                                href="/pages/contact.html">Contact</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-white nav-bar-item nav-projects"
-                                href="/pages/projects.html">Projects</a>
-                        </li>
-                    </ul>
-                </div>
+    <div class="terminal-wrapper">
+        <div class="terminal">
+            <div class="terminal-header">
+                <a href="selector.html"><div class="terminal-button red"></div></a>
+                <a href="selector.html"><div class="terminal-button yellow"></div></a>
+                <a href="selector.html"><div class="terminal-button green"></div></a>
             </div>
-        </nav>
-    </header>
-    <main>
+            <div class="terminal-body">
+                <h1>Contact Me</h1>
+                <div class="contact-info">
+                    <h2>Lenny Bos</h2>
+                    <p>Email: lenny.bos07@gmail.com</p>
+                </div>
 
-        <div class="container py-5 my-5 contactForm">
-            <h1>Contact</h1>
-            <div class="py-2 row"></div>
-            <div class="row">
-                <div class="col-sm">
-                    <input placeholder=" Topic" class="inputTopic" type="text">
-                </div>
-            </div>
-            <div class="py-5 row">
-                <div class="pb-5 col-sm">
-                    <input class="inputQuestion" type="text">
-                </div>
-            </div>
-            <div class="pt-5 mt-5 row">
-                <div class="pt-5 col-sm">
-                    <input placeholder=" E-mail" class="inputEmail" type="text">
-                </div>
-            </div>
-            <div class="row mt-5">
-                <div class="col-sm">
-                    <button class="submitBtn">Submit</button>
-                </div>
             </div>
         </div>
+    </div>
 
-    </main>
-    <footer>
-    </footer>
-
-    <script src="/js/main.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.7/dist/umd/popper.min.js"
-        integrity="sha384-zYPOMqeu1DAVkHiLqWBUTcbYfZ8osu1Nd6Z89ify25QV9guujx43ITvfi12/QExE"
-        crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.min.js"
-        integrity="sha384-Y4oOpwW3duJdCWv5ly8SCFYWqFDsfob/3GkgExXKV4idmbt98QcxXYs9UoXAB7BZ"
-        crossorigin="anonymous"></script>
-    </script>
+    <script src="../script.js"></script> <!-- Link to your JavaScript file -->
 </body>
-
 </html>
