--- a/pages/index.html
+++ b/pages/index.html
@@ -1,10 +1,10 @@
-<!-- projects.html -->
+<!-- index.html -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Projects Page</title>
+    <title>My Terminal Portfolio</title>
     <link rel="stylesheet" href="/style/style.css"> <!-- Link to your CSS file -->
 </head>
 <body>
@@ -16,7 +16,8 @@
                 <a href="selector.html"><span class="terminal-button green"></span></a>
             </div>
             <div class="terminal-body" id="terminalBody">
-                <!-- Content of your projects page goes here -->
+                <div class="terminal-prompt">user@portfolio:~$</div>
+                <div class="terminal-input">Enter Name: <input type="text" id="username" onkeydown="handleInput(event)"></div>
             </div>
         </div>
     </div>
